--- a/contact.html
+++ b/contact.html
@@ -17,16 +17,10 @@
                     <a href="projects.html">Projects</a>
                     <a href="contact.html">Contact</a>
                 </div>
-                <div class="navbar-right">
-                    <a href=https://github.com/harcurcio><i class="fab fa-github"></i></a>
-                    <a href=https://gitlab.com/harcurcio><i class="fab fa-gitlab"></i></a>
-                    <a href=https://www.linkedin.com/in/harcurcio><i class="fab fa-linkedin"></i></a>
-                </div>
-            </nav>
         </header>
 
         <h2>Contact Me</h2>
-        <p>Want to get in touch? Feel free to send an email my way.</p>
+        <p>Shoot me an email if you have any questions or just want to get in touch!</p>
 
         <form>
             <div class="form-group">
