--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav class="navbar fixed-top navbar-light" style="background-color: grey;">
                 <div class="navbar-left">
                     <a href="index.html">Home</a>
-                    <a href="projects.html">Projects</a>
+                    <a href="work.html">Projects</a>
                     <a href="contact.html">Contact</a>
                 </div>
         </header>
