--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,10 @@
 
     <body>
         <header>
-            <nav class="navbar fixed-top navbar-light" style="background-color: white;">
+            <nav class="navbar fixed-top navbar-light" style="background-color: grey;">
                 <div class="navbar-left">
                     <a href="index.html">Home</a>
-                    <a href="projects.html">Projects</a>
+                    <a href="work.html">Projects</a>
                     <a href="contact.html">Contact</a>
                 </div>
         </header>
