--- a/work.html
+++ b/work.html
@@ -21,13 +21,9 @@
         </header>
         
          <div>
-      <h3> Soundscape narrative</h3>
+      <h3> Soundscape Narrative</h3>
       <p> The first project we did for my digital media class was to create a story with no sounds. This would be the soundscape narrative. For mine I did a normal practice conisting of lift and swim.</p>
       <img src = "https://github.com/quintonpierce/WebPortfolio-/blob/main/Images/Soundscape%20Narrative%20Picture.png" alt = "Soundscape Practice">
-
-      <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/926870536&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/preston-weinberg" title="Preston Weinberg" target="_blank" style="color: #cccccc; text-decoration: none;">Preston Weinberg</a> · <a href="https://soundcloud.com/preston-weinberg/hellwalker" title="Hellwalker" target="_blank" style="color: #cccccc; text-decoration: none;">Hellwalker</a></div>
-
-    </div>
 
     <div>
       <h3> Visual arguement </h3>
