--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
 
     <body>
         <header>
-            <nav class="navbar fixed-top navbar-light" style="background-color: white;">
+            <nav class="navbar fixed-top navbar-light" style="background-color: grey;">
                 <div class="navbar-left">
                     <a href="index.html">Home</a>
                     <a href="work.html">Projects</a>
