--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-7">
-                    <p class="name">Hi, My Name is Quinton!</p> 
+                    <p>class="name">Hi, My Name is Quinton!</p> 
                     <p>This is my first website where I will be uploading all of my random work!</p>
                 </div>
             </div>
