--- a/work.html
+++ b/work.html
@@ -21,19 +21,19 @@
         </header>
         
          <div>
-      <h3> Soundscape Narrative</h3>
+      <h1> Soundscape Narrative </h1>
       <p> The first project we did for my digital media class was to create a story with no sounds. This would be the soundscape narrative. For mine I did a normal practice conisting of lift and swim.</p>
       <img src = "https://github.com/quintonpierce/WebPortfolio-/blob/main/Images/Soundscape%20Narrative%20Picture.png" alt = "Soundscape Practice">
 
     <div>
-      <h3> Visual arguement </h3>
+      <h1> Visual Arguement </h1>
       <p> The second project we did was a visual argument. I chose something that I hope reaches a lot of people in todays society. </p>
         <img src = "https://github.com/quintonpierce/WebPortfolio-/blob/main/Images/Choose%20happiness%20not%20money.png" alt = "choose happiness not money">
       </div>
     </div>
 
     <div>
-      <h3> TVG1 reconstruction </h3>
+      <h1> TVG1 Reconstruction </h1>
       <p>This next piece of work was one that I worked on in my Critical Making class for my midterm and fianl project with my group member Preston. It is the first video game console ever!
       <img src = "https://github.com/quintonpierce/WebPortfolio-/blob/main/Images/TVG1ForHTML.jpg" alt = "TVG1ForHTML.jpg"
 
