--- a/work.html
+++ b/work.html
@@ -14,8 +14,8 @@
             <nav class="navbar fixed-top navbar-light" style="background-color: white;">
                 <div class="navbar-left">
                     <a href="index.html">Home</a>
-                    <a href="work.html">Projects</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="work.html">Work</a>
+                    <a href="contact.html">Email Me</a>
                 </div>
                  </nav>
         </header>
