--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <nav class="navbar fixed-top navbar-light" style="background-color: white;">
                 <div class="navbar-left">
                     <a href="index.html">Home</a>
-                    <a href="work.html">Projects</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="work.html">Work</a>
+                    <a href="contact.html">Email ME</a>
                 </div>
         </header>
 
         <div class="container">
             <div class="row">
                 <div class="col-md-7">
-                    <p>class="name">Hi, My Name is Quinton!</p> 
+                    <p>class="name"> Hi, My Name is Quinton! </p> 
                     <p>This is my first website where I will be uploading all of my random work!</p>
                 </div>
             </div>
