--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
                 <div class="navbar-left">
                     <a href="index.html">Home</a>
                     <a href="work.html">Work</a>
-                    <a href="contact.html">Email Me</a>
+                    <a href="contact.html">Email</a>
                 </div>
         </header>
 
