--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
                 </div>
         </header>
 
-        <h2>Contact Me</h2>
+        <h2>Email Me</h2>
         <p>Shoot me an email if you have any questions or just want to get in touch!</p>
             
             
