--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <a href="work.html">Work</a>
                     <a href="contact.html">Email</a>
                 </div>
+             </nav>
         </header>
 
         <div class="container">
